tests/script/negative/typecheck/invalid_prim_args.s
transition initial -> terminal;

@initial
foo () {
  bal = holderBalance();
  terminate();
}
