tests/script/negative/typecheck/invalid_prim_args.out
Error at Line 5, Column 9:
   Arity mismatch in function call holderBalance:
      Expecting 2 arguments, but got 0